fixed scrollability on mobile

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ hr {
   border: 0;
   clear:both;
   display:block;
-  width: 200%;               
+  width: 100%;               
   background-color:#000000;
   height: 1px;
   margin-left: -8px;
